--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "handlebars": "^4.7.7",
+    "express-handlebars": "^4.0.2",
     "mongoose": "^5.9.7"
   }
 }
